# rc-androidndk-dev-env

./: .gitignore  CMakeLists.txt  README.md  manager.py  requirements.txt
.devcontainer/: Dockerfile  Dockerroot  devcontainer.json
scripts/: build.py  clean.sh  debug.py  gdbclient.py  helpers.py  tidy-check.py
src/: CMakeLists.txt  TestCode.c  TestCode.h  main.c
src/include/: debug.h  errorcodes.h  templateProject.h
src/include/template_module/: template_module.h
src/template_module/: CMakeLists.txt  template_module.c  template_module_utest.cpp
src/tests/: CMakeLists.txt  main.cpp  testcases.cpp
